switch to multi-release jar to support different JDK versions